--- a/Lesson49/Homework.css
+++ b/Lesson49/Homework.css
@@ -1,13 +1,31 @@
-p{
-    text-align: center;
-    display: table;
+div {
+    display: inline-block;
+}
+div :not(.div1){
+    background-color: lightseagreen;
+    margin: 5px;
+}
+.div1{
     border-style: solid;
     border-color: gray;
     border-width: 1px;
+    margin: auto;
 }
-.days, .hours, .minutes, .seconds{
-    font-size: large;
-    padding: 10px;
-    margin: 10px;
+p{
+    text-align: center;
+}
+table{
+    border-style: solid;
+    border-color: gray;
+    border-width: 1px;
+    padding: 5px;
+}
+td{
+    text-align: center;
+}
+.tr1{
     background-color: lightseagreen;
+}
+.tr2{
+    background-color: lightgray;
 }
